// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FacebookButton /> with icon 1`] = `
<Component
  handleClick={[Function]}
  size="responsive"
  variant="facebook"
>
  <span>
    <styled.span>
      <Styled(FacebookAlt) />
    </styled.span>
    Sign in with Facebook
  </span>
</Component>
`;

exports[`<FacebookButton /> with initial props 1`] = `
<Component
  handleClick={[Function]}
  size="responsive"
  variant="facebook"
>
  <span>
    Sign in with Facebook
  </span>
</Component>
`;
